--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@types/howler": "^2.0.5",
     "@types/uuid": "^3.4.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "howler": "^2.0.12",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.26"
